--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
   <h1>Peanut butter and Jelly Milkshake</h1>
-  
+  <p>Good Milkshake</p>
+  <img src="images/milkshake.png" alt="Peanut butter & Jelly Milkshake">
+  <p>image from delish made by Suzanne Clements<a href="https://www.delish.com/cooking/recipe-ideas/a36759019/disney-peanut-butter-jelly-milkshake/"> Www.delish.com</a></p>
+  <table>
+    <th>Ingredients:</th>
+    <td>2tbsp of Peanut butter</td>
+    <td>2tbsp of Jelly</td>
+    <td>2tbsp of vanilla Ice cream</td>
+    <td>1/4 cup of milk</td>
+  </table>
 </body>
 </html>
