--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <p>image from delish made by Suzanne Clements<a href="https://www.delish.com/cooking/recipe-ideas/a36759019/disney-peanut-butter-jelly-milkshake/"> Www.delish.com</a></p>
   <table>
     <th>Ingredients:</th>
-    <tr>2tbsp of Peanut butter</tr>
-    <tr>2tbsp of Jelly</tr>
-    <tr>2tbsp of vanilla Ice cream</tr>
-    <tr>1/4 cup of milk</tr>
+    <tr><td>2tbsp of Peanut butter</td></tr>
+    <tr><td>2tbsp of Jelly</td></tr>
+    <tr><td>2tbsp of vanilla Ice cream</td></tr>
+    <tr><td>1/4 cup of milk</td></tr>
   </table>
 </body>
 </html>
