--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Peanut butter and Jelly Milkshake</h1>
   <p>Good Milkshake</p>
-  <img src="images/milkshake.png" alt="Peanut butter & Jelly Milkshake">
+  <img src="images/milkshake.png" alt="Peanut butter & Jelly Milkshake" width="200" height="300">
   <p>image from delish made by Suzanne Clements<a href="https://www.delish.com/cooking/recipe-ideas/a36759019/disney-peanut-butter-jelly-milkshake/"> Www.delish.com</a></p>
   <table>
     <th>Ingredients:</th>
