--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Peanut butter and Jelly Milkshake</title>
 </head>
 <body>
   <h1>Peanut butter and Jelly Milkshake</h1>
-  <p>Good Milkshake</p>
-  <img src="images/milkshake.png" alt="Peanut butter & Jelly Milkshake" width="100" height="200">
+  <p>Good Milkshake from <a href="https://www.delish.com/cooking/recipe-ideas/a36759019/disney-peanut-butter-jelly-milkshake/">Delish.com</a></p>
+  <img src="images/milkshake.png" alt="Peanut butter & Jelly Milkshake" width="200" height="200">
   <p>image from delish made by Suzanne Clements<a href="https://www.delish.com/cooking/recipe-ideas/a36759019/disney-peanut-butter-jelly-milkshake/"> Www.delish.com</a></p>
   <table>
     <th>Ingredients:</th>
@@ -17,5 +17,10 @@
     <tr><td>2tbsp of vanilla Ice cream</td></tr>
     <tr><td>1/4 cup of milk</td></tr>
   </table>
+  <h2>Steps:</h2>
+  <h3>1. Blend</h3>
+  <p>Put the Ingredients into the blender and blend it.</p>
+  <h3>2. Done... plus options</h3>
+  <p>Serve it, and can use additional Peanut butter and jelly for tasting.</p>
 </body>
 </html>
