--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <img src="images/milkshake.png" alt="Peanut butter & Jelly Milkshake" width="200" height="200">
   <p>image from delish made by Suzanne Clements<a href="https://www.delish.com/cooking/recipe-ideas/a36759019/disney-peanut-butter-jelly-milkshake/"> Www.delish.com</a></p>
   <table>
-    
+    <thead>
     <th>Ingredients:</th>
+    </thead>
+    <tbody>
     <tr><td>2tbsp of Peanut butter</td></tr>
     <tr><td>2tbsp of Jelly</td></tr>
     <tr><td>2tbsp of vanilla Ice cream</td></tr>
     <tr><td>1/4 cup of milk</td></tr>
+    </tbody>
   </table>
   <h2>Steps:</h2>
   <h3>1. Blend</h3>
