youve got to be kidding me

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>image from delish made by Suzanne Clements<a href="https://www.delish.com/cooking/recipe-ideas/a36759019/disney-peanut-butter-jelly-milkshake/"> Www.delish.com</a></p>
   <table>
     <thead>
-    <th>Ingredients:</th>
+    <tr><th>Ingredients:</th></tr>
     </thead>
     <tbody>
     <tr><td>2tbsp of Peanut butter</td></tr>
